@startuml

title __AMCWardPanels.TableFrames.Others Package Diagram__\n


    namespace AMCWardPanels {
      namespace TableFrames {
        namespace Others {
          class AMCWardPanels.TableFrames.Others.OthTable {
              + OthTable()
          }
        }
      }
    }

  


    namespace AMCWardPanels {
      namespace TableFrames {
        namespace Others {
          class AMCWardPanels.TableFrames.Others.OthTableModel {
              + OthTableModel()
              + OthTableModel()
              + isCellEditable()
          }
        }
      }
    }

  


    namespace AMCWardPanels {
      namespace TableFrames {
        namespace Others {
          class AMCWardPanels.TableFrames.Others.OthTablePanel {
              - columnName : String[]
              - dbData : Object[][]
              - scrollPane : JScrollPane
              - table : JTable
              + OthTablePanel()
              + setupTable()
              + tableChanged()
              - editPatient()
          }
        }
      }
    }

  

  AMCWardPanels.TableFrames.Others.OthTableModel -up-|> AMCWardPanels.TableFrames.MyTableModel
  AMCWardPanels.TableFrames.Others.OthTablePanel .up.|> javax.swing.event.TableModelListener
  AMCWardPanels.TableFrames.Others.OthTablePanel -up-|> javax.swing.JPanel
  AMCWardPanels.TableFrames.Others.OthTablePanel o-- Methods.GeneralWard
  AMCWardPanels.TableFrames.Others.OthTablePanel o-- AMCWardPanels.TableFrames.Others.OthTableModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
